--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="contact">
         <div class="container">
             <h2>Contact Me</h2>
-            <p>Email: <a href="mailto:kartiksahu24@iimb.ac.in">kartiksahu24@iimb.ac.in</a></p>
+            <p>Email: <a href="mailto:kartik.sahu24@iimb.ac.in">kartiksahu24@iimb.ac.in</a></p>
             <p>City: Udaipur, Rajasthan</p>
         </div>
     </section>
